@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.44
+ * @version 0.13.45
  */
 
 /* Breaks */
@@ -40,7 +40,7 @@
 @filter-connector: gray;
 @input-border: gainsboro;
 @line-border: gray;
-@line-border-light: hsl(from @line-border h s l / 0.5);
+@line-border-light: hsl(from @line-border h s l / 0.25);
 @message-border: firebrick;
 @nav-selected: seagreen;
 @panel-shadow: gray;
