@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.42
+ * @version 0.13.45
  */
 @import "wcom-05-constants";
 *, *::before, *::after {
@@ -26,7 +26,7 @@ body {
     --btn-bg: linear-gradient(0deg, var(--bg-base), var(--bg-lighter));
     --btn-bg-disabled: linear-gradient(0deg, @btn-border, var(--bg-lighter));
     --btn-bg-highlight: radial-gradient(@btn-highlight,transparent,transparent);
-    background: var(--body-bg);
+    background: fixed var(--body-bg);
     display: grid;
     grid-template-areas: 'header header' 'sidebar main';
     grid-template-columns: (@nav-width-both + 0.5rem) 1fr;
@@ -97,6 +97,15 @@ aside {
 main {
     grid-area: main; overflow: auto; position: relative;
     scrollbar-color: @scrollbar-fg var(--bg-lighter); z-index: 1;
+    &.grid {
+        background:
+            fixed repeating-linear-gradient(
+                @line-border-light, @line-border-light 1px,
+                transparent 1px, transparent 40px),
+            fixed repeating-linear-gradient(
+                to right, @line-border-light, @line-border-light 1px,
+                transparent 1px, transparent 40px);
+    }
     .layout-container {
         display: flex; flex-direction: column; height: 100%;
         justify-content: space-between; position: absolute; width: 100%;
@@ -464,7 +473,7 @@ footer {
             border-top-left-radius: 10px;
             border-left: 1px solid @line-border-light;
             border-top: 1px solid @line-border-light;
-            box-shadow: -3px -3px 3px var(--bg-base);
+            box-shadow: -3px -3px 0px 3px var(--bg-base);
             box-sizing: content-box;
             content: ''; height: 2.5rem; width: 0.5rem;
             transform: translate(-0.0635rem, 0.2rem);
@@ -642,7 +651,7 @@ footer {
         color: @text-dark; font-family: #fonts[cursive];
         opacity: 1; position: relative; margin-top: 1rem;
         max-width: @message-max-width; padding: 0.5rem;
-        transition: opacity 1s;
+        transition: opacity 1s; word-wrap: anywhere;
         &.fade {
             opacity: 0;
         }
